# media-core

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.es.md  README.md  SECURITY.md  deprecate-broken-versions.ps1  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
__tests__/: cjs.test.cjs  esm.test.mjs  index.test.ts  setup.ts
__tests__/__mocks__/: native.ts
crates/mc-core/: Cargo.toml
crates/mc-core/src/: error.rs  lib.rs  types.rs
crates/mc-core/src/buffer/: mod.rs
crates/mc-core/src/ffi/: mod.rs
crates/mc-core/src/io/: mod.rs
crates/mc-core/src/pipeline/: mod.rs
crates/mc-core/src/sync/: mod.rs
crates/mc-core/src/utils/: mod.rs
crates/mc-node/: Cargo.toml  package.json
crates/mc-node/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md  TROUBLESHOOTING.md
examples/: cjs-example.cjs  esm-example.mjs  ts-example.ts
scripts/: create-npm-dirs.js  fix-dts.js  sync-versions.js
src/: error.ts  index.ts  pipeline.ts  types.ts
