[workspace]
members = [
    "crates/mc-core",
    "crates/mc-node",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
authors = ["Brashkie <dev@brashkie.dev>"]
license = "Apache-2.0"
repository = "https://github.com/Brashkie/media-core"

[workspace.dependencies]
# Internal
mc-core = { path = "crates/mc-core" }

# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency / memory
bytes = "1.7"
bytemuck = { version = "1.18", features = ["derive"] }
bitflags = "2.6"
parking_lot = "0.12"
arc-swap = "1.7"
crossbeam-channel = "0.5"
smallvec = { version = "1.13", features = ["union", "const_generics"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# napi
napi = { version = "3.9", features = ["async", "napi8"] }
napi-derive = "2.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
